Plugin is not compatible with IntelliJ IDE 2022.3 #1466
add more open packages